<resources>
    <string name="retry">Retry</string>
    <string name="repository_url_text">Source code available at https://0xacab.org/leap/bitmask_android</string>
    <string name="leap_tracker">Issue tracker available at https://0xacab.org/leap/bitmask_android/issues</string>
    <string name="translation_project_text">Translations welcome and appreciated. See our Transifex project at https://www.transifex.com/projects/p/bitmask/</string>
    <string name="switch_provider_menu_option">Switch provider</string>
    <string name="info">info</string>
    <string name="show_connection_details">Show connection details</string>
    <string name="connection_details">Connection details</string>
    <string name="routes_info">Routes: %s</string>
    <string name="routes_info6">IPv6 routes: %s</string>
    <string name="error_empty_username">The username must not be empty.</string>
    <string name="cert_from_keystore">Got certificate \'%s\' from keystore</string>
    <string name="provider_label">Provider:</string>
    <string name="provider_label_none">No provider configured</string>
    <string name="status_unknown">Status unknown.</string>
    <string name="eip_service_label">Encrypted VPN Internet Access</string>
    <string name="configuration_wizard_title">Select a service provider</string>
    <string name="add_provider">Add new Provider</string>
    <string name="introduce_new_provider">Add a new service provider</string>
    <string name="save">Save</string>
    <string name="new_provider_uri">Domain name</string>
    <string name="valid_url_entered">The URL is valid</string>
    <string name="not_valid_url_entered">Malformed URL</string>
    <string name="provider_details_title">Provider details</string>
    <string name="use_anonymously_button">Use anonymously</string>
    <string name="username_hint">username</string>
    <string name="username_ask">Please enter your username</string>
    <string name="password_ask">Please enter your password</string>
    <string name="password_hint">password</string>
    <string name="password_match">Passwords match</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="user_message">User message</string>
    <string name="about_fragment_title">About</string>
    <string name="exclude_apps_fragment_title">Exclude apps from VPN</string>
    <string name="error_srp_math_error_user_message">Try again: Server math error</string>
    <string name="error_bad_user_password_user_message">Incorrect username or password</string>
    <string name="error_not_valid_password_user_message">It must be at least 8 characters long</string>
    <string name="error_client_http_user_message">Try again: Client HTTP error</string>
    <string name="error_io_exception_user_message">Try again: I/O error</string>
    <string name="error_json_exception_user_message">Try again: Bad response from the server</string>
    <string name="error_no_such_algorithm_exception_user_message">Encryption algorithm not found. Please upgrade Android!</string>
    <string name="signup_or_login_button">Sign Up/Log In</string>
    <string name="login_button">Log In</string>
    <string name="login_to_profile">Log in to profile</string>
    <string name="logout_button">Log Out</string>
    <string name="signup_button">Sign Up</string>
    <string name="create_profile">Create profile</string>
    <string name="setup_provider">Set up provider</string>
    <string name="setup_error_title">Configuration Error</string>
    <string name="setup_error_configure_button">Configure</string>
    <string name="setup_error_close_button">Exit</string>
    <string name="setup_error_text">There was an error configuring %s with your chosen provider.\n\nYou may choose to reconfigure, or exit and configure a provider upon next launch.</string>
    <string name="setup_error_text_custom">There was an error configuring %s.\n\nYou may choose to reconfigure, or exit.</string>
    <string name="server_unreachable_message">The server is unreachable, please try again.</string>
    <string name="error.security.pinnedcertificate">Security error, upgrade the app or choose another provider.</string>
    <string name="malformed_url">It doesn\'t seem to be a %s provider.</string>
    <string name="certificate_error">This is not a trusted %s provider.</string>
    <string name="service_is_down_error">The service is down.</string>
    <string name="configuring_provider">Configuring provider</string>
    <string name="incorrectly_downloaded_certificate_message">Your anonymous certificate was not downloaded</string>
    <string name="downloading_certificate_message">Downloading VPN certificate</string>
    <string name="updating_certificate_message">Updating VPN certificate</string>
    <string name="login.riseup.warning">Riseup users will need to create a separate account to use the VPN service</string>
    <string name="succesful_authentication_message">Authenticated</string>
    <string name="authentication_failed_message">Authentication failed</string>
    <string name="registration_failed_message">Registration failed</string>
    <string name="eip_status_start_pending">Initiating connection</string>
    <string name="eip_status_connecting">Connecting VPN</string>
    <string name="eip_status_unsecured">Unsecured Connection</string>
    <string name="eip_status_secured">Secured Connection</string>
    <string name="eip_cancel_connect_title">Cancel connection?</string>
    <string name="eip_cancel_connect_text">There is a connection attempt in progress.  Do you wish to cancel it?</string>
    <string name="eip.warning.browser_inconsistency">Turn off VPN connection? When the VPN is off, you may leak personal information to your Internet provider or local network.</string>
    <string name="eip_state_not_connected">Not running! Insecure connection!</string>
    <string name="eip_state_connected">Connection Secure</string>
    <string name="provider_problem">It seems there is a problem with the provider.</string>
    <string name="try_another_provider">Please try another provider, or contact yours.</string>
    <string name="default_username">Anonymous</string>
    <string name="logging_in">Logging in</string>
    <string name="signing_up">Signing up</string>
    <string name="vpn.button.turn.on">Turn on</string>
    <string name="vpn.button.turn.off">Turn off</string>
    <string name="vpn_button_turn_off_blocking">Stop blocking</string>
    <string name="vpn_securely_routed">Your traffic is securely routed through:</string>
    <string name="vpn_securely_routed_no_internet">No internet connection detected, when it comes back we\'ll route your traffic securely through:</string>
    <string name="log_fragment_title">Log</string>
    <string name="vpn_fragment_title">VPN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="void_vpn_establish">%s blocks all outgoing internet traffic.</string>
    <string name="void_vpn_error_establish">Blocking all internet traffic failed.</string>
    <string name="void_vpn_stopped">Stopped blocking all outgoing internet traffic.</string>
    <string name="void_vpn_title">Blocking traffic</string>
    <string name="update_provider_details">Update provider details</string>
    <string name="update_certificate">Update certificate</string>
    <string name="warning_eip_json_corrupted">Updating provider configuration failed.</string>
    <string name="eip_json_corrupted_user_message">Updating provider configuration failed. Please log in to try again.</string>
    <string name="save_battery">Save battery</string>
    <string name="always_on_vpn">Always-on VPN</string>
    <string name="subtitle_always_on_vpn">Open Android System Settings</string>
    <string name="tethering">VPN Hotspot</string>
    <string name="ipv6Firewall">Block IPv6</string>
    <string name="require_root">Requires root permissions</string>
    <string name="experimental_features">Experimental features</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="always_on_vpn_user_message">To enable always-on VPN in Android VPN Settings click on the configure icon [img src] and turn the switch on.</string>
    <string name="always_on_blocking_vpn_user_message">To protect your privacy optimally, you should also activate the option \"Block connections without VPN\".</string>
    <string name="donate_title">Donate</string>
    <string name="donate_message">LEAP depends on donations and grants. Please donate today if you value secure communication that is easy for both the end-user and the service provider.</string>
    <string name="donate_button_remind_later">Remind me later</string>
    <string name="donate_button_donate">Donate</string>
    <string name="nav_drawer_obfuscated_connection">Use Bridges</string>
    <string name="nav_drawer_subtitle_obfuscated_connection">Circumvent VPN filtering</string>
    <string name="censorship_circumvention">Censorship circumvention</string>
    <string name="use_snowflake">Use Snowflake</string>
    <string name="snowflake_description">Protect configuration process against censorship.</string>
    <string name="vpn_settings">VPN settings</string>
    <string name="prefer_udp">Use UDP if available</string>
    <string name="prefer_udp_subtitle">UDP can be faster and better for streaming, but does not work for all networks.</string>
    <string name="title_circumvention_setup">Do You Require Censorship Circumvention?</string>
    <string name="circumvention_setup_description">If you live where the internet is censored you can use our censorship circumvention options to access all internet services. These options will slow down your connection!</string>
    <string name="circumvention_setup_hint">%s will automatically try to connect you to the internet using a variety of circumvention technologies. You can fine tune this in the advanced settings.</string>
    <string name="use_standard_vpn">Use standard %s</string>
    <string name="use_circumvention_tech">Use circumvention tech (slower)</string>
    <string name="title_upcoming_request">Upcoming requests</string>
    <string name="title_upcoming_request_summary">In the next panels Android will ask for your permission in form of a Connection Request and Notification Request.</string>
    <string name="title_upcoming_connection_request_summary">For the Connection Request it’s important to know that Bitmask only partners with trusted partner providers that adhere to best practices for VPNs and have a verifiable history of protecting user’s data and identities. However, if you are manually connecting to a non-public provider, make sure you trust them.</string>
    <string name="title_upcoming_notification_request_summary">Accepting the Notification Request allows the app to run in the background and enables you to see your data usage from within Android’s notification center.</string>
    <string name="censorship_circumvention_description">Manual configuration requires technical understanding. Proceed with caution.</string>
    <string name="discovery">Discovery</string>
    <string name="discovery_description">Censors can block the discovery of critical configuration information from your provider. Choose a circumvention option to bypass blocks.</string>
    <string name="tunnelling">Tunneling</string>
    <string name="tunnelling_description">Censors can block access to the open internet. Choose a circumvention option to bypass blocks.</string>
    <string name="port_hopping">Port Hopping</string>
    <string name="port_hopping_description">"Censors use traffic analysis to block access to the open internet. Port Hopping can make this harder for them. "</string>
</resources>