<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    tools:context="se.leap.bitmaskclient.drawer.NavigationDrawerFragment"
    android:clickable="true"
    android:focusable="true"
    android:fillViewport="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/background_drawer" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/foreground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/drawer_logo" />
        </FrameLayout>

        <se.leap.bitmaskclient.views.IconTextEntry
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        <se.leap.bitmaskclient.views.IconTextEntry
            android:id="@+id/switch_provider"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:text="@string/switch_provider_menu_option"
            app:icon="@drawable/ic_switch_provider_36"
            android:visibility="gone"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <se.leap.bitmaskclient.views.IconSwitchEntry
            android:id="@+id/bridges_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/nav_drawer_obfuscated_connection"
            app:icon="@drawable/ic_bridge_36"
            android:visibility="gone"
            />

        <se.leap.bitmaskclient.views.IconSwitchEntry
            android:id="@+id/battery_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/save_battery"
            app:icon="@drawable/ic_battery_36"
            />

        <se.leap.bitmaskclient.views.IconTextEntry
            android:id="@+id/always_on_vpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/always_on_vpn"
            app:icon="@drawable/ic_always_on_36"
            android:visibility="gone"
            />

        <se.leap.bitmaskclient.views.IconTextEntry
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/donate_title"
            app:icon="@drawable/ic_donate_36"
            android:visibility="gone"
            />

        <se.leap.bitmaskclient.views.IconTextEntry
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/log_fragment_title"
            app:icon="@drawable/ic_log_36"
            />

        <se.leap.bitmaskclient.views.IconTextEntry
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/about_fragment_title"
            app:icon="@drawable/ic_about_36"
            />


    </LinearLayout>

</ScrollView>
