<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/add_button_margin"
        android:gravity="center"
        android:text="@string/donate_title"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/donate_message" />

    <ImageView
        android:id="@+id/ivImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/add_button_margin"
        android:layout_marginTop="@dimen/add_button_margin"
        android:src="@drawable/donation_img" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/add_button_margin"
        android:layout_marginRight="@dimen/add_button_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/cust_button_primary"
        android:text="@string/donate_button_donate"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLater"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginBottom="@dimen/mainbutton_padding"
        android:layout_marginLeft="@dimen/add_button_margin"
        android:layout_marginRight="@dimen/add_button_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/cust_button_secondary"
        android:text="@string/donate_button_remind_later"
        android:textColor="@android:color/tab_indicator_text"
        android:textStyle="bold" />

</LinearLayout>