<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/stdpadding"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".providersetup.fragments.ProviderSelectionFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/title_upcoming_request"
            android:paddingBottom="@dimen/stdpadding"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_upcoming_request_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/title_upcoming_request_summary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_upcoming_connection_request_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/stdpadding"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/title_upcoming_connection_request_summary"/>

         <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_upcoming_notification_request_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:paddingTop="@dimen/stdpadding"
             android:visibility="gone"
             tools:visibility="visible"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/title_upcoming_notification_request_summary"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>