<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/stdpadding"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".providersetup.fragments.ProviderSelectionFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/title_circumvention_setup"
            android:paddingBottom="@dimen/stdpadding"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_circumvention_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/circumvention_setup_description"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_provider_selection_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="40dp"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary_transparent"
                android:padding="@dimen/activity_horizontal_margin"
                >
                <RadioGroup
                    android:id="@+id/circumvention_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_plain_vpn"
                        android:text="@string/use_standard_vpn"
                        />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_circumvention"
                        android:text="@string/use_circumvention_tech"
                        />
                </RadioGroup>
                <androidx.appcompat.widget.AppCompatTextView
                    android:paddingTop="@dimen/stdpadding"
                    android:id="@+id/tv_circumvention_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circumvention_setup_hint"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>