<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/add_button_margin"
        android:gravity="center"
        android:text="@string/always_on_vpn"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <se.leap.bitmaskclient.views.IconTextView
        android:id="@+id/user_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="0dp"
        android:autoLink="web"
        tools:text="@string/always_on_vpn_user_message"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/block_vpn_user_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:text="@string/always_on_blocking_vpn_user_message"
        android:visibility="gone"
        tools:visibility="visible"
        />


    <CheckBox
        android:id="@+id/do_not_show_again"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdpadding"
        android:text="@string/do_not_show_again" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_marginRight="@dimen/standard_margin"
            android:background="@drawable/cust_button_secondary"
            android:text="@android:string/cancel"
            android:textColor="@android:color/tab_indicator_text"
            android:textStyle="bold" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_ok"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:background="@drawable/cust_button_primary"
            android:text="@android:string/ok"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>